
[package]
authors = ["Neplex <info@neplextech.com>"]
edition = "2021"
name    = "node-bgone"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow      = "1.0"
image       = "0.25"
nalgebra    = "0.34"
napi        = "3.0.0"
napi-derive = "3.0.0"
rayon       = "1.10"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
